--- a/styles/home.css
+++ b/styles/home.css
@@ -8,8 +8,35 @@ body{
 
 input {
     display: none;
+    
+}
+
+.pokemon-options {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
+input + img {
+    width: 200px;
+    
 }
 
 input:checked + img {
     border: solid black 3px;
+    
+}
+
+.btn{
+    margin-top: 100px;
+    text-align: center;
+}
+
+.btn > button{
+    border-radius: 45%;
+    font-size: 20px;
+    padding: 50px 5px;
+    background: linear-gradient(-180deg, red 50%, rgb(251, 251, 251) 50%);
 }
