--- a/results/results.css
+++ b/results/results.css
@@ -1,3 +1,16 @@
+html {
+    background-image: url('../assets/route-.jpg');
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+a{
+    font-size: 30px;
+    color: rgb(56, 176, 215);
+}
+
 .dataImg {
     height: 200px;
     width: 200px;
