--- a/results/results.css
+++ b/results/results.css
@@ -11,17 +11,17 @@ a {
     color: rgb(56, 176, 215);
 }
 
-.dataImg {
+.poke-img {
     height: 200px;
     width: 200px;
 
 }
-#dataUl {
+#poke-ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-.dataLi {
+.poke-li {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -29,7 +29,7 @@ a {
     font-weight: bold;
 }
 
-.dataDiv {
+.prop-values-wrapper {
     display: flex;
     flex-direction: column;
 }
